# forensic-toffanvahlkar-highwaytojail-3

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  crypto.c  crypto.h  main.c
solution/: .gitignore  Makefile  crack.sh  extract.sh
src/: CMakeLists.txt  crypto.c  crypto.h  explorer.c  explorer.h  main.c
vm/: Makefile  id_rsa.pub  qemu-ifdown.sh  qemu-ifup.sh  setup_vm.sh  ssh_config  start_vm.sh  upload_flag.sh
