cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER "/bin/true")
project("All Night Long 1.3")
add_executable(cryptolock main.c crypto.c)
find_package(OpenSSL)
if (OPENSSL_FOUND)
    include_directories(${OPENSSL_INCLUDE_DIR})
    target_link_libraries(cryptolock ${OPENSSL_CRYPTO_LIBRARY})
endif (OPENSSL_FOUND)
